<resources>
    <string name="app_name">covied</string>
    <string name="sign_in_by_google">sign in by google</string>
    <string name="hello">hello</string>
    <string name="todo">TODO</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main_page">MainActivity</string>
    <string name="Name">Name</string>
    <string name="phoneNum">phoneNum</string>
    <string name="Email">Email</string>
    <string name="pass1">pass1</string>
    <string name="SginUp">SginUp</string>
    <string name="pass2">pass2</string>
    <string name="button">button</string>
    <string name="login">login</string>
    <string name="signin">signin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">profile</string>
    <string name="map">map</string>
    <string name="permit">permit</string>
    <string name="hospatil">hospatil</string>
    <string name="test">test</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_map">Map</string>
    <string name="identify_your_symptoms">symptoms</string>
    <string name="select_data">select Data</string>
    <string name="chose_time_from">chose time from</string>
    <string name="chose_time_to">chose time to</string>
    <string name="textview">TextView</string>
    <string name="accept">Accept</string>
    <string name="describtion">describtion</string>
    <string name="notifications">not</string>
    <string name="_12">12</string>
    <string name="description">description</string>
    <string name="persone">persone</string>
    <string name="discover_new_devices">Discover New Devices</string>
    <string name="bluetooth_on">Bluetooth ON</string>
    <string name="visble">Visble</string>
    <string name="enable">Enable</string>
    <string name="my_bt_name">My bt name</string>
    <string name="Visible">Visible</string>
    <string name="GeoKnit">GeoKnit</string>
    <string name="display_track">display track</string>
    <string name="enter_destination_location">Enter destination Location</string>
    <string name="enter_source_location">Enter Source Location</string>
    <string name="page_permit">page permit</string>

</resources>