<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="244dp"
        android:layout_height="378dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/login"
            android:layout_width="154dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:gravity="center"
            android:text="@string/login"
            tools:text="login" />

        <Button
            android:id="@+id/signin"
            android:layout_width="154dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/signin"
            tools:text="signin" />

        <Button
            android:id="@+id/Signin"
            android:layout_width="154dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:baselineAligned="false"
            android:text="@string/sign_in_by_google" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>