<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".permit">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/NavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/buttom_mnue"
        tools:ignore="MissingConstraints">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginLeft="101dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="101dp"
        android:layout_marginRight="101dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/select_data"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColor="@color/colorPrimary"
        android:textColorLink="#9C27B0"
        app:drawableTint="#673AB7"
        app:layout_constraintBottom_toTopOf="@+id/editTextTime2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTime2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginLeft="101dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="101dp"
        android:layout_marginRight="101dp"
        android:layout_marginBottom="5dp"
        android:autofillHints=""
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/chose_time_from"
        android:inputType="time"
        android:textColor="@color/colorPrimary"
        android:textColorLink="#9C27B0"
        app:drawableTint="#673AB7"
        app:layout_constraintBottom_toTopOf="@+id/editTextTime3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTime3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginLeft="101dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="101dp"
        android:layout_marginRight="101dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/chose_time_to"
        android:importantForAutofill="no"
        android:inputType="time"
        android:textColor="@color/colorPrimary"
        android:textColorLink="#9C27B0"
        app:drawableTint="#673AB7"
        app:layout_constraintBottom_toTopOf="@+id/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/Accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginLeft="162dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"
        android:layout_marginBottom="84dp"
        android:background="@android:color/white"
        android:text="@string/accept"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:drawableTint="#673AB7"
        app:layout_constraintBottom_toTopOf="@+id/NavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <EditText
        android:id="@+id/description"
        android:layout_width="210dp"
        android:layout_height="83dp"
        android:layout_marginStart="101dp"
        android:layout_marginLeft="101dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="60dp"
        android:autofillHints=""
        android:background="@android:color/white"
        android:ems="10"
        android:text="@string/description"
        android:textColor="@color/colorPrimary"
        android:textColorHint="#9C27B0"
        android:textColorLink="#9C27B0"
        app:drawableTint="#673AB7"
        app:layout_constraintBottom_toTopOf="@+id/Accept"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime3"
        tools:ignore="LabelFor,TextFields" />


</androidx.constraintlayout.widget.ConstraintLayout>