<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".hospital">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/NavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="86dp"
        android:layout_marginBottom="1dp"
        app:itemBackground="@android:color/holo_green_dark"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/buttom_mnue"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/loucation"
        android:layout_width="259dp"
        android:layout_height="65dp"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:background="@drawable/badge"
        android:hint="@string/enter_source_location"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,MissingConstraints,TextFields" />

    <EditText
        android:id="@+id/destination"
        android:layout_width="259dp"
        android:layout_height="65dp"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:background="@drawable/badge"
        android:hint="@string/enter_destination_location"
        android:importantForAutofill="no"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loucation"
        tools:ignore="MissingConstraints,TextFields" />

    <Button
        android:id="@+id/track"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="145dp"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="145dp"
        android:layout_marginRight="145dp"
        android:background="@drawable/badge"
        android:text="@string/display_track"
        android:textColor="@android:color/holo_green_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/destination"
        tools:ignore="MissingConstraints" />



</androidx.constraintlayout.widget.ConstraintLayout>